# azure-iot-demo

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/azure-iot-middleware-freertos/: CMakeLists.txt
components/azure-sdk-for-c/: CMakeLists.txt
components/coreMQTT/: CMakeLists.txt
components/sample-azure-iot/: CMakeLists.txt
components/sample-azure-iot/common/logging/: logging_compat.c  logging_levels.h  logging_stack.h
components/sample-azure-iot/common/transport/: transport_socket.c  transport_tls_socket_using_mbedtls.c
components/sample-azure-iot/common/utilities/: azure_sample_crypto.h  azure_sample_crypto_mbedtls.c  mbedtls_freertos_port.c  mbedtls_freertos_port.h
config/: gpio_vars.h  threading_alt.h
main/: CMakeLists.txt  Kconfig.projbuild  azure_iot_freertos_esp32_main.c  sample_azure_iot.c
